<resources>
    <string name="app_name">MobileCourse</string>
    <!-- Login -->
    <string name="text_Username">Username</string>
    <string name="txt_hint_username">e-mail@domain.com</string>
    <string name="txt_Password">Password</string>
    <string name="txt_hint_password">your password</string>
    <string name="txt_BUTTON">LOGIN</string>
    <!-- OK -->
    <string name="txt_WELCOME">WELCOME!</string>
    <string name="txt_User_two_points">User: </string>
    <!-- ERROR -->
    <string name="txt_ERROR">ERROR!</string>
    <string name="txt_invalid_login">Invalid username or password</string>

    <string name="txt_OK">OK</string>
    <string name="txt_CANCEL">CANCELA</string>

    <!-- WelcomeActivity -->
    <string name="txt_Welcome">Welcome</string>
    <string name="txt_Intro">Introduction</string>
    <string name="txt_lorem_ipsum_1">
        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
    </string>
    <string name="txt_Class_1">Class 1</string>
    <string name="txt_lorem_ipsum_2">
        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\', making it look like readable English.
    </string>

    <!-- NavBar -->
    <string name="appbar_txt_action_Search">Search</string>
    <string name="appbar_txt_action_Settings">Settings</string>
    <string name="appbar_txt_action_Logout">Logout</string>

    <string name="txt_tarea_1">Go to the supermarket</string>
    <string name="txt_hora_1">10:00</string>
    <string name="txt_lugar_1">"kwik-mart"</string>
    <string name="txt_tarea_2">Take car to maintenance</string>
    <string name="txt_hora_2">14:00</string>
    <string name="txt_lugar_2">Taller</string>
    <string name="txt_tarea_3">Go to the laundry</string>
    <string name="txt_hora_3">20:00</string>
    <string name="txt_lugar_3">Laundrymart</string>

    <string name="prueba_git">TestGIT</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_to_do_recycler">To Do - Recycler</string>
    <string name="menu_to_do">To Do</string>
    <string name="menu_about">About</string>
    <string name="menu_detail">Detail</string>
    <string name="menu_new_task">New Task</string>
    <string name="txt_Developed_by">Developed by\nJorge Alberto</string>

    <string name="txt_task">Task</string>
    <string name="txt_time">Time</string>
    <string name="txt_place">Place</string>
    <string name="txt_save">SAVE</string>

    <string name="txt_select">Select</string>
    <string name="txt_study">Study</string>
    <string name="txt_shopping">Shopping</string>
    <string name="txt_to_do_exercise">To do exercise</string>
    <string name="txt_gym">Gym</string>
    <string name="txt_supermarket">Supermarket</string>
    <string name="txt_university">University</string>


    <string-array name="activitys">
        <item>Select</item>
        <item>Study</item>
        <item>Shopping</item>
        <item>To do exercise</item>
    </string-array>
</resources>