<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <!--<item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />-->
        <item
            android:id="@+id/nav_todo_recycler"
            android:icon="@android:drawable/sym_contact_card"
            android:title="@string/menu_to_do_recycler" />
        <item
            android:id="@+id/nav_new_task"
            android:icon="@android:drawable/ic_input_add"
            android:title="@string/menu_new_task" />
        <item
            android:id="@+id/nav_todo"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/menu_to_do" />
        <item
            android:id="@+id/nav_about"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/menu_about" />
    </group>
</menu>