<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewTaskFragment"
    android:orientation="vertical"
    android:layout_margin="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_task"
        android:textSize="16sp"/>
    <Spinner
        android:id="@+id/spiTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/activitys"/>
    <EditText
        android:id="@+id/edtTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_time"
        android:textSize="16sp"/>
    <EditText
        android:id="@+id/edtPlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_place"
        android:layout_marginTop="16dp"
        android:textSize="16sp"/>
    <Button
        android:id="@+id/btnNewTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:text="@string/txt_save"/>

</LinearLayout>