<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".ToDoFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#eee"
        android:layout_marginTop="2dp"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:text="@string/txt_tarea_1"/>
        <Button
            android:id="@+id/btn_detail_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=">"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#eee"
        android:layout_marginTop="2dp"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:text="@string/txt_tarea_2"/>
        <Button
            android:id="@+id/btn_detail_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=">"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#eee"
        android:layout_marginTop="2dp"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:text="@string/txt_tarea_3"/>
        <Button
            android:id="@+id/btn_detail_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=">"/>
    </LinearLayout>
</LinearLayout>